<resources>
    <string name="app_name">RealEstateManagerApp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_agent">New Agent?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="default_city_name_main">Amman</string>
</resources>